...
    modifier: Modifier = Modifier,
) {
    Column(modifier = modifier) {
        BisqTextFieldV0(
            value = uiState.userNameEntry.value,
            onValueChange = { onAction(RevolutFormUiAction.OnUserNameChange(it)) },
            label = "paymentAccounts.userName".i18n(),
            placeholder =
                "paymentAccounts.createAccount.prompt".i18n(
                    "paymentAccounts.userName".i18n().lowercase(),
                ),
            isError = uiState.userNameEntry.errorMessage != null,
            bottomMessage = uiState.userNameEntry.errorMessage,
            singleLine = true,
        )
...
