...
                Row(
                    horizontalArrangement = Arrangement.spacedBy(BisqUIConstants.ScreenPadding),
                    verticalAlignment = Alignment.CenterVertically,
                ) {
                    val selectAllAlpha = if (canSelectAll) 1f else 0.4f
                    BisqText.BaseRegular(
                        text = "mobile.paymentAccounts.picker.selectAll".i18n(),
                        underline = true,
                        modifier =
                            Modifier
                                .alpha(selectAllAlpha)
                                .clickable(enabled = canSelectAll) { onSelectAll() },
                    )
                    val selectNoneAlpha = if (canSelectNone) 1f else 0.4f
                    BisqText.BaseRegular(
                        text = "mobile.paymentAccounts.picker.clearAll".i18n(),
                        underline = true,
                        modifier =
                            Modifier
                                .alpha(selectNoneAlpha)
                                .clickable(enabled = canSelectNone) { onClearAll() },
                    )
...
